# tournament_analysis

./: .gitignore  pyproject.toml
src/tournament_analysis/abstract_classes/: seeds.py  tournament.py
src/tournament_analysis/classes/nodes/: basic_node.py
src/tournament_analysis/classes/structures/: seeded_single_elim.py  seedless_single_elim.py
